--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG - Dragon Repeller</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        // JavaScript code goes here
+    </script>      
 </head>
 <body>
     <div id="game"></div>
