--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG - Dragon Repeller</title>
     <link rel="stylesheet" href="style.css">
-    <script>
-        // JavaScript code goes here
-    </script>      
+    <script src="./script.js"></script>
 </head>
 <body>
     <div id="game"></div>
