--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="game">
         <div id="stats">
+            <span class="stat">XP: 0</span>
+            <span class="stat">Health: 100</span>
+            <span class="stat">Gold: 50</span>
         </div>
         <div id="controls">
         </div>
